--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -58,6 +58,7 @@ jobs:
         cd ..
         
     - name: Create Release
+      id: create_release
       uses: softprops/action-gh-release@v1
       with:
         files: Multi-LLM-Comparator-v${{ steps.version.outputs.version }}.zip
